Link to CSS file

--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <link href="style.css" rel="stylesheet" />
   <title>Compte à rebours jusqu'à mon anniversaire</title>
 </head>
 <body>
   <h1>Eh golio voici le temps qu'il te reste avant le 24 septembre !</h1>
   <div class="countdown" id="countdown">Calcul en cours...</div>
 
-  <script>
     <script type="text/javascript" src="main.js"></script>
-  </script>
 </body>
 </html>
