--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <title>Compte à rebours jusqu'à mon anniversaire</title>
 </head>
 <body>
-  <h1>Eh golio voici le temps qu'il te reste avant le 24 septembre !</h1>
-  <div class="countdown" id="countdown">Calcul en cours...</div>
+	<div class="center w40" style="margin: 2rem auto;">
+	  <h1>Eh golio voici le temps qu'il te reste avant le 24 septembre !</h1>
+	  <div class="countdown" id="countdown">Calcul en cours...</div>
+	</div>
 
     <script type="text/javascript" src="main.js"></script>
 </body>
