--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Compte à rebours jusqu'à mon anniversaire</title>
 </head>
 <body>
-	<div class="center w40" style="margin: 2rem auto;">
+	<div class="container center">
 	  <h1>Eh golio voici le temps qu'il te reste avant le 24 septembre !</h1>
 	  <div class="countdown" id="countdown">Calcul en cours...</div>
 	</div>
