chore: update new deadline
Changement de deadline au 1er décembre

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <link href="style.css" rel="stylesheet" />
-  <title>Compte à rebours jusqu'à mon anniversaire</title>
-</head>
-<body>
-	<div class="container center">
-	  <h1>Eh golio voici le temps qu'il te reste avant le 24 septembre !</h1>
-	  <div class="countdown" id="countdown">Calcul en cours...</div>
-	</div>
+  <head>
+    <meta charset="UTF-8" />
+    <link href="style.css" rel="stylesheet" />
+    <title>THE DEADLINE</title>
+  </head>
+  <body>
+    <div class="container center">
+      <h1>Eh golio voici le temps qu'il te reste avant le 1er décembre !</h1>
+      <div class="countdown" id="countdown">Calcul en cours...</div>
+    </div>
 
     <script type="text/javascript" src="main.js"></script>
-</body>
+  </body>
 </html>
