--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container center">
-      <h1>Eh golio voici le temps qu'il te reste avant le 1er décembre !</h1>
+      <h1 id="titre"></h1>
       <div class="countdown" id="countdown">Calcul en cours...</div>
     </div>
 
